<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>DemoAPIAutomationFramework</groupId>
  <artifactId>DemoAPIAutomationFramework</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  
   <build>

      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.4</version>
          <configuration>
          	<suiteXmlFiles>
          		<suiteXmlFile>testng.xml</suiteXmlFile>
          	</suiteXmlFiles>
          </configuration>
        </plugin>
        
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.1</version>
          <configuration>
          	<source>21</source>
        	<target>21</target>
	        <compilerArgs>
	            <arg>--add-opens</arg>
	            <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
	            <arg>--add-opens</arg>
	            <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
	            <arg>--add-opens</arg>
	            <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
	        </compilerArgs>
	      </configuration>
        </plugin>
             
      </plugins>

  </build>
  
  <dependencies>
  <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
	<dependency>
	    <groupId>io.rest-assured</groupId>
	    <artifactId>rest-assured</artifactId>
	    <version>5.5.6</version>
	    <scope>test</scope>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
	<dependency>
	    <groupId>org.testng</groupId>
	    <artifactId>testng</artifactId>
	    <version>7.10.2</version>
	    <scope>test</scope>
	</dependency>

	<dependency>
		<groupId>SD</groupId>
		<artifactId>RestAssuredDemo</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</dependency>
	
	 <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.16.1</version> <!-- Use the latest stable version -->
    </dependency>
    
    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi</artifactId>
	    <version>5.4.1</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi-ooxml</artifactId>
	    <version>5.4.1</version>
	</dependency>
	
	<dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-api</artifactId>
        <version>2.20.0</version>
    </dependency>

    <!-- Log4j Core (implementation) -->
    <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>2.20.0</version>
    </dependency>
    
	<dependency>
	    <groupId>com.aventstack</groupId>
	    <artifactId>extentreports</artifactId>
	    <version>5.0.9</version>
	</dependency>
	
	<dependency>
	    <groupId>org.projectlombok</groupId>
	    <artifactId>lombok</artifactId>
	    <version>1.18.34</version> <!-- or newer -->
	    <scope>provided</scope>
	</dependency>
    
  </dependencies>
  
  
  
</project>